<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_turmas"
            android:icon="@drawable/ic_menu_turma"
            android:title="@string/turmas"/>

        <item
            android:id="@+id/nav_decks"
            android:icon="@drawable/ic_decks"
            android:title="@string/decks"/>

        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/ic_cards"
            android:title="@string/cards"/>

        <item android:title="@string/outros">

            <menu>
                <item
                    android:id="@+id/menu_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/logout"/>
            </menu>

        </item>

    </group>
</menu>