<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.catcards.uix.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_turmas"
        android:name="com.app.catcards.uix.turmas.TurmasFragment"
        android:label="@string/turmas"
        tools:layout="@layout/fragment_turmas" >
        <action
            android:id="@+id/action_nav_turmas_to_nav_decks"
            app:destination="@id/nav_decks" />
    </fragment>

    <fragment
        android:id="@+id/nav_decks"
        android:name="com.app.catcards.uix.decks.DecksFragment"
        android:label="@string/decks"
        tools:layout="@layout/fragment_decks" >
        <action
            android:id="@+id/action_nav_decks_to_nav_turmas"
            app:destination="@id/nav_turmas" />
        <action
            android:id="@+id/action_nav_decks_to_nav_cards"
            app:destination="@id/nav_cards" />
    </fragment>

    <fragment
        android:id="@+id/nav_cards"
        android:name="com.app.catcards.uix.cards.CardsFragment"
        android:label="@string/cards"
        tools:layout="@layout/fragment_decks" >
        <action
            android:id="@+id/action_nav_cards_to_cardFragment"
            app:destination="@id/cardFragment" />
        <action
            android:id="@+id/action_nav_cards_to_nav_decks"
            app:destination="@id/nav_decks" />
    </fragment>
    <fragment
        android:id="@+id/cardFragment"
        android:name="com.app.catcards.uix.card.CardFragment"
        android:label="fragment_card"
        tools:layout="@layout/fragment_card" >
        <action
            android:id="@+id/action_cardFragment_to_nav_cards"
            app:destination="@id/nav_cards" />
    </fragment>

</navigation>