<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uix.onboarding.OnboardingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            tools:context=".Onboarding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bem_vindo"
                android:textAppearance="@style/style_nunito_22"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/app_name"
                android:gravity="center"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="100dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttom_nav_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar_se"
                android:textAppearance="@style/style_nunito_white_20"
                android:background="@drawable/shape_rectangle_button"
                android:gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="200dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/possui_conta"
                    android:textAppearance="@style/style_nunito_16" />

                <Button
                    android:id="@+id/buttom_nav_login"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/log_in"
                    android:textColor="#2F92A5"
                    android:backgroundTint="@color/white"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:layout_marginStart="8dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>