<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uix.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            tools:context=".Login">

            <TextView
                android:layout_width="132dp"
                android:layout_height="45dp"
                android:background="@drawable/catcards"
                android:textAppearance="@style/app_name"
                android:layout_gravity="center"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="80dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faca_login"
                android:textAppearance="@style/style_nunito_22"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="@style/style_nunito_16"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/get_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/insira_email"
                android:textColor="@color/black"
                android:textColorHint="#A6A6A6"
                android:textSize="16sp"
                android:fontFamily="@font/nunito"
                android:inputType="textEmailAddress"
                android:background="@drawable/selector_background_get"
                android:drawableStart="@drawable/baseline_email"
                android:autofillHints=""
                android:ems="15"
                android:maxLines="1"
                android:maxLength="30"
                android:drawablePadding="12dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/senha"
                android:textAppearance="@style/style_nunito_16"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/get_senha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/insira_senha"
                android:textColor="@color/black"
                android:textColorHint="#A6A6A6"
                android:textSize="16sp"
                android:fontFamily="@font/nunito"
                android:inputType="textPassword"
                android:background="@drawable/selector_background_get"
                android:drawableStart="@drawable/baseline_lock"
                app:passwordToggleEnabled="true"
                android:autofillHints=""
                android:ems="15"
                android:maxLines="1"
                android:maxLength="30"
                android:drawablePadding="12dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"/>

            <Button
                android:id="@+id/buttom_esqueceu_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esqueceu_senha"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:backgroundTint="@color/white"
                android:textAllCaps="false"
                android:stateListAnimator="@null"
                android:gravity="start"
                android:layout_marginTop="5dp"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="225dp" />

            <Button
                android:id="@+id/buttom_entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrar"
                android:textColor="@color/white"
                android:background="@drawable/shape_rectangle_button"
                android:textAppearance="@style/style_nunito_white_20"
                app:circularflow_radiusInDP="30dp"
                android:padding="7dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/nao_tem_conta"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:backgroundTint="@color/white"
                    android:layout_marginStart="60dp"
                    android:gravity="center_vertical" />

                <Button
                    android:id="@+id/buttom_nav_cadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cadastrar_se"
                    android:textColor="#2F92A5"
                    android:backgroundTint="@color/white"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null"
                    android:layout_marginStart="8dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>