<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uix.sucesso.SucessoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            tools:context=".Sucesso">

        <TextView
            android:layout_width="132dp"
            android:layout_height="45dp"
            android:background="@drawable/catcards"
            android:textAppearance="@style/app_name"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="25dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_bem_sucedido"
            android:textAppearance="@style/style_nunito_22"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obrigado"
            android:textAppearance="@style/style_nunito_16"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aviso_redirecionamento"
            android:textAppearance="@style/style_nunito_12"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/buttom_nav_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clique_aqui"
            android:textColor="#2F92A5"
            android:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>