<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/item_pergunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pergunta"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/snow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="125dp">

            <Button
                android:id="@+id/item_res_a"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/resposta_a"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/gray"
                android:layout_margin="8dp"
                android:padding="18dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/item_res_b"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/resposta_b"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/gray"
                android:layout_margin="8dp"
                android:padding="18dp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/snow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/item_res_c"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/resposta_c"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/gray"
                android:layout_margin="8dp"
                android:padding="18dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/item_res_d"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/resposta_d"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/gray"
                android:layout_margin="8dp"
                android:padding="18dp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
