<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uix.recuperacao.RecuperacaoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            tools:context=".Recuperacao">

            <TextView
                android:layout_width="132dp"
                android:layout_height="45dp"
                android:background="@drawable/catcards"
                android:textAppearance="@style/app_name"
                android:layout_gravity="center"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="25dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recupere_senha"
                android:textAppearance="@style/style_nunito_22"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginTop="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informe_email"
                android:textAppearance="@style/style_nunito_16"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginTop="25dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:hint="@string/email"
                android:padding="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="@color/red_blood">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/get_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:autofillHints=""
                    android:ems="15"
                    android:maxLength="30"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttom_recuperar_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recuperar_senha"
                android:background="@drawable/shape_rectangle_button"
                android:textAppearance="@style/style_nunito_white_20"
                app:circularflow_radiusInDP="30dp"
                android:textColor="@color/white"
                android:padding="7dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/ou"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:backgroundTint="@color/white"
                    android:layout_marginStart="115dp"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/buttom_nav_cadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/criar_nova_conta"
                    android:textColor="#2F92A5"
                    android:backgroundTint="@color/white"
                    android:textAllCaps="false"
                    android:stateListAnimator="@null" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>