<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uix.card.CardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/gray"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:paddingTop="40dp">

                <TextView
                    android:id="@+id/item_pergunta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pergunta"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:paddingStart="22dp"
                    android:paddingEnd="22dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="125dp">

                    <Button
                        android:id="@+id/item_res_a"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/resposta_a"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/gray"
                        android:layout_margin="8dp"
                        android:padding="18dp"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/item_res_b"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/resposta_b"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/gray"
                        android:layout_margin="8dp"
                        android:padding="18dp"
                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="50dp">

                    <Button
                        android:id="@+id/item_res_c"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/resposta_c"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/gray"
                        android:layout_margin="8dp"
                        android:padding="18dp"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:id="@+id/item_res_d"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/resposta_d"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/gray"
                        android:layout_margin="8dp"
                        android:padding="18dp"
                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
